--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,32 @@
 @import "tailwindcss";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@layer 
+base
+{
+  *, *::before, *::after {
+    
+box-sizing
+: border-box;
+  }
+
+  * {
+    
+margin
+: 0;
+    
+padding
+: 0;
+    
+box-sizing
+: border-box;
+  }
+
+  html {
+    
+font-family
+: sans-serif;
+    /* color: #333; */
+  }
 }
 
 :root {
@@ -11,7 +34,7 @@
   --dark-color: #000;
 }
 
-body{
+body {
   background-color: var(--dark-color);
   color: var(--light-color);
 }
