--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,34 @@
 @import "tailwindcss";
+@import "./fonts.css";
 
-@layer 
-base
-{
-  *, *::before, *::after {
-    
-box-sizing
-: border-box;
+@layer base {
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
   }
 
   * {
-    
-margin
-: 0;
-    
-padding
-: 0;
-    
-box-sizing
-: border-box;
+    margin: 0;
+
+    padding: 0;
+
+    box-sizing: border-box;
   }
 
   html {
-    
-font-family
-: sans-serif;
-    /* color: #333; */
+    font-family: sans-serif;
   }
 }
 
 :root {
   --light-color: #fff;
   --dark-color: #000;
+  --primary-color: #ae7aff;
 }
 
 body {
+  font-family: "JetBrains Mono", monospace;
   background-color: var(--dark-color);
   color: var(--light-color);
 }
